added some styles for countries block

--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -6,6 +6,10 @@
   color: $color;
 }
 
+.text--caption{
+  @include text(24px, normal, $special-orange)
+}
+
 .text--default{
   @include text(16px, normal, #ffffff)
 }
