--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,8 @@
 @import "blocks/site-list.scss";
 @import "blocks/promo.scss";
 @import "blocks/about.scss";
+@import "blocks/countries.scss";
 @import "blocks/information-list.scss";
+@import "blocks/visits-list.scss";
 
 // body { background: green; }
