--- a/source/sass/blocks/information-list.scss
+++ b/source/sass/blocks/information-list.scss
@@ -21,5 +21,5 @@ background-color: $basic-yellow;
 }
 
 .information-list__description{
-  @include text(18px, bold, $basic-blue);
+  @include text(18px, bold, 18px, $basic-blue);
 }
