--- a/source/sass/global/colors.scss
+++ b/source/sass/global/colors.scss
@@ -4,4 +4,4 @@ $special-orange:#FF8D30;
 $basic-blue : #161C35;
 $dark-blue: #192144;
 $special-grey: #444444;
-$basic-blue-light: #EDEFF6;
+$basic-blue-light: #1D2E5B;
