added text styles and background colors and background images

--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -9,3 +9,11 @@
 .card-list__user-name{
   @include text(21px, bold, 21px, $basic-blue-light);
 }
+
+.card-list__offline{
+  fill: #F97676;
+}
+
+.card-list__online{
+  fill: #81E31E;
+}
