--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,10 @@
 .page-header{
-
+  margin-top: 19px;
 }
+
+.page-header__menu{
+  display: flex;
+  justify-content: space-between;
+}
+
+// 19 25 25
