--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,6 @@
 .promo{
-  background:  url(../../img/globe-back-mobile-1.png) no-repeat;
+  margin-top: 94px;
+  background:  url(../../img/globe-back-mobile.png) no-repeat;
 }
 
 .promo__slogan{
