--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -4,11 +4,11 @@
 }
 
 .users__caption{
-  background: url(../../img/back.svg) left top no-repeat, url(../../img/smolov-back-desctop.svg) right top no-repeat;
+  background: url(../../img/back.svg) left top no-repeat, url(../../img/smolov-back-desktop.png) right top no-repeat;
 }
 
 .users__cards{
-  background: url(../../img/rogovaya-back-desctop.svg) no-repeat;
+  background: url(../../img/rogovaya-back-desktop.png) no-repeat;
 }
 
 .users__level-number{
