--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,3 +1,3 @@
 .about{
-  background: #192144 url(../../img/aboutmobile.svg) no-repeat;
+  background: #192144 url(../../img/about-mobile.png) no-repeat;
 }
