--- a/source/sass/global/text.scss
+++ b/source/sass/global/text.scss
@@ -1,10 +1,13 @@
 @mixin text($font-size: 16px, $font-weight: normal, $line-height: 22px, $color: #ffffff){
-  font-family: Blogger Sans;
-  font-style: normal;
   font-weight: $font-weight;
   font-size: $font-size;
   line-height: $line-height;
   color: $color;
+}
+
+.text{
+  font-family: Blogger Sans;
+  font-style: normal;
 }
 
 .text--caption{
