--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,3 +1,14 @@
 .about{
+  margin-top: 72px;
   background: #192144 url(../../img/about-mobile.png) no-repeat;
+  // background-size: contain;
+}
+
+.about__container{
+  margin-left: 49px;
+  margin-bottom: 82px;
+}
+
+.countries__header{
+  margin-left: 25px;
 }
