--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -7,4 +7,22 @@
   justify-content: space-between;
 }
 
+.page-header__description{
+  margin-bottom: 25px;
+}
+
+.page-header__authorisation{
+  margin-top: 51px;
+}
+
+.page-header__social-list{
+  margin-left: 110px;
+  margin-bottom: 41px;
+}
+
+.page-header__menu-opened{
+
+}
+
+
 // 19 25 25
