--- a/source/sass/blocks/visits-list.scss
+++ b/source/sass/blocks/visits-list.scss
@@ -2,6 +2,13 @@
 
 }
 
+.visits-list__item{
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 26px;
+  margin-bottom: 24px;
+}
+
 .visits-list__user-icon{
 
 }
