--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -1,5 +1,23 @@
 .countries{
   background-color: #EDEFF6;
+  padding-bottom: 25px;
+}
+
+.countries__container{
+  padding-top: 71px;
+}
+
+.countries__header{
+  margin-left: 25px;
+}
+
+.countries__list{
+  margin-top: 60px;
+  margin-bottom: 25px;
+}
+
+.countries__all-countries{
+  margin: 25px;
 }
 
 .countries__info{
