--- a/source/sass/blocks/icon-list.scss
+++ b/source/sass/blocks/icon-list.scss
@@ -1,4 +1,6 @@
-.icon-list{}
+.icon-list{
+
+}
 
 .icon-list__details{
   @include text(16px, bold, 18px, $dark-blue);
@@ -6,6 +8,10 @@
 
 .icon-list__details--light{
   color: $basic-yellow;
+}
+
+.icon-list__item{
+  display: inline-block;
 }
 
 .icon-list__mappoint{
