--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,7 +2,25 @@
   background-color: #ffffff;
 }
 
+.page-footer__caption{
+  text-align: center;
+  padding-top: 37px;
+}
+
 .page-footer__developed-caption{
   line-height: 16px;
   color: $special-grey;
+}
+
+.page-footer__list{
+  text-align: center;
+}
+
+.page-footer__developed{
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-footer__developed-caption{
+  padding-top: 16px;
 }
