--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -1,6 +1,6 @@
 
 .users{
-
+padding-bottom: 25px;
 }
 
 .users__header{
@@ -22,6 +22,7 @@
 
 .users__cards{
   margin-top: 54px;
+  margin-bottom: 25px;
 }
 
 .users__level-number{
