--- a/source/sass/global/colors.scss
+++ b/source/sass/global/colors.scss
@@ -6,3 +6,5 @@ $dark-blue: #192144;
 $special-grey: #444444;
 $basic-blue-light: #1D2E5B;
 $blue: #121936;
+$basic-grey: #EDEFF6;
+$special-blue-light: #DFE3F0;
