--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -3,6 +3,15 @@
   border-radius: 25px;
 }
 
+.button--active{
+  fill: $basic-blue-light;
+}
+
+.button--disable{
+  opacity: 0.15;
+}
+
+
 .button--arrow{
   font-size: 18px;
   line-height: 18px;
