--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -11,6 +11,17 @@
   opacity: 0.15;
 }
 
+.button--like{
+  fill: #F02323;
+}
+
+.button--like-disable{
+  opacity:"0.5";
+}
+
+.button--light-theme{
+  background-color: #ffffff;
+}
 
 .button--arrow{
   font-size: 18px;
