--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 // Gloabal
 @import "global/colors.scss";
 @import "global/text.scss";
+@import "global/sizes.scss";
 
 //Blocks
 @import "blocks/icon-list.scss";
