--- a/source/sass/blocks/information-list.scss
+++ b/source/sass/blocks/information-list.scss
@@ -1,7 +1,29 @@
-.information-list{}
+.information-list{
+  text-align: center;
+  list-style-type: none;
+  margin: 0 auto;
+
+  @media (min-width: $medium-width){
+    width: 688px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media (min-width: $large-width) {
+    width: 1320px;
+    flex-wrap: nowrap;
+  }
+}
 
 .information-list__item{
+  @media (min-width: $medium-width) {
+    width: 50%;
+  }
 
+  @media (min-width: $large-width) {
+    width: 100%;
+    flex-wrap: nowrap;
+  }
 }
 
 .information-list__item--dark-theme{
