--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,4 +1,8 @@
-.site-list__link{
+.site-list{
   list-style-type: none;
+  padding: 0;
+}
+
+.site-list__link{
   @include text(30px, 500, 35px, #192144);
 }
