--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,9 +1,11 @@
 .social-list{
+  padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 .social-list__item{
-  display: inline-block;
 }
 
 .social-list__link{
