--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -23,6 +23,11 @@ padding-bottom: 25px;
 .users__cards{
   margin-top: 54px;
   margin-bottom: 25px;
+
+  @media (min-width: $medium-width) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .users__level-number{
@@ -31,4 +36,8 @@ padding-bottom: 25px;
 
 .users__level-text{
   @include text(14px, normal, 14px, #FFFFFF);
+}
+
+.users__background-images{
+  display: flex;
 }
