--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -1,12 +1,26 @@
 .card-list{
   padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .card-list__item{
   margin-bottom: 11px;
 }
 
+.card-list__flag {
+  @media (min-width: $medium-width) {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-left: -15px;
+  }
+}
+
 .card-list__info{
+  position: relative;
   background: #FFFFFF;
   text-align: center
 }
@@ -61,5 +75,21 @@
 }
 
 .card-list__card{
+  display: flex;
+  flex-direction: column;
 
+  @media (min-width: $medium-width) {
+    flex-direction: row;
+  }
+}
+
+.card-list__card--under{
+  flex-direction: column;
+  margin-right: 50px;
+  // display: flex;
+  // flex-direction: column;
+
+  // @media (min-width: $medium-width) {
+  //   flex-direction: row;
+  // }
 }
