--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -6,6 +6,10 @@
 .feedback__list{
   display: flex;
   flex-direction: column;
+  @media (min-width: $large-width) {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .feedback__header{
@@ -15,6 +19,10 @@
 
 .feedback__authorisation-link{
   color: $basic-yellow;
+}
+
+.feedback__registration{
+  text-align: center;
 }
 
 .feedback__email{
