--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -85,7 +85,10 @@
 
 .card-list__card--under{
   flex-direction: column;
-  margin-right: 50px;
+  @media (min-width: $medium-width) {
+    margin-right: 50px;
+  }
+
   // display: flex;
   // flex-direction: column;
 
