--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -10,22 +10,34 @@
     background-image: url(../../img/flags-background.png);
     // background-size:     contain;
     background-repeat:   no-repeat;
-     background-position: top right;
+    background-position: top right;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
 .countries__header{
   margin-left: 25px;
-  width: 380px;
+  max-width: 380px;
+
+  @media (min-width: $medium-width) {
+    margin: 0 auto;
+  }
+
+  @media (min-width: $large-width) {
+    padding-top: 50px;
+    margin-left: 170px;
+  }
 }
 
 .countries__list{
   margin-top: 60px;
   margin-bottom: 25px;
-
+  display: flex;
+  flex-direction: column;
+  flex-direction: column;
   @media (min-width: $medium-width) {
-    display: flex;
-    flex-direction: column;
     align-items: center;
   }
 }
