--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,6 +1,15 @@
 .feedback{
-  padding-top: 72px;
-  padding: 44px;
+  padding-top: 75px;
+  padding-bottom: 45px;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 75px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .feedback__list{
