--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,7 @@
 @import "blocks/logo.scss";
 @import "blocks/main-menu.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/menu.scss";
 @import "blocks/number.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/page-header.scss";
