fixed review comments

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,7 +1,7 @@
 .contacts{
   padding-top: 33px;
   background-color: $basic-yellow;
-  padding-bottom: 35px;
+  position: relative;
 }
 
 .contacts__get-direction{
@@ -27,4 +27,40 @@ fill: $basic-yellow;
   @media (min-width: $medium-width) {
     display: none;
   }
+}
+
+
+.contacts__map{
+  width: 100%;
+}
+
+.contacts__map--small{
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.contacts__map--medium{
+  display: none;
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    display: block;
+  }
+}
+
+.contacts__map--large{
+  display: none;
+  @media (min-width: $large-width) {
+    display: block;
+  }
+}
+
+.contacts__map-point{
+  display: block;
+  position: absolute;
+  top: 45%;
+  left: 45%;
+  @media (min-width: $medium-width) and(max-width:$medium-max-width) {
+    display: none;
+  }
+
 }
