--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,4 +1,18 @@
 .container{
-  margin-left: 25px;
-  margin-right: 25px;
+
+  margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  // margin-left: 25px;
+  // margin-right: 25px;
+
+  max-width: $small-max-width;
+
+  @media (min-width: $medium-width) {
+    max-width: $medium-max-width;
+  }
+
+  @media (min-width: $large-width) {
+    max-width: $large-width;
+  }
 }
