--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -1,3 +1,8 @@
+.step-list{
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
 .step-list__item{
   background-color: #ffffff;
   margin-bottom: 10px;
