--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -10,9 +10,24 @@
   padding-bottom: 20px;
 }
 
+.step-list__item__container{
+  display: flex;
+  flex-direction: column;
+}
+
+.step-list__caption{
+  @media (min-width: $medium-width) {
+    order: 1;
+  }
+}
+
 .step-list__description{
   margin-bottom: 20px;
   @include text(16px, bold, 22px, $special-grey);
+
+  @media (min-width: $medium-width) {
+    order: 2;
+  }
 }
 
 .step-list__info{
@@ -34,3 +49,62 @@
   margin-top: 22px;
 }
 
+.step-list__trip-data{
+  margin-bottom: 20px;
+}
+
+.step-list__trip-data--companions{
+  @media (min-width: $medium-width) {
+    order: 3;
+  }
+}
+
+.step-list__trip-data--duration{
+  @media (min-width: $medium-width) {
+    order: 4;
+  }
+}
+
+.step-list__info{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.step-list__definition{
+  @include text(16px, 500, 16px, $basic-blue-light);
+  letter-spacing: 0.07em;
+}
+
+.step-list__count{
+  @include text(14px, 500, 14px, $basic-blue-light);
+  text-align: center;
+}
+
+.step-list__child{
+  margin-top: 8px;
+
+  @media (min-width: $medium-width) {
+    order: 5;
+  }
+}
+
+.step-list__date{
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $medium-width) {
+    order: 6;
+  }
+}
+
+.step-list__month-date{
+  padding-top: 25px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.step-list__day-date{
+  margin-top: 25px;
+  padding-top: 25px;
+}
