fixed broken header menu of mobile and planshet modes

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -15,8 +15,10 @@
 }
 
 .page-header--menu-opened{
+  height: 570px;
   @media (max-width: $medium-max-width) {
     background-color: #ffffff;
+    height: 910px;
   }
 }
 
