--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,6 +1,9 @@
 .page-header{
   padding-top: 19px;
   padding-bottom: 12px;
+}
+
+.page-header--height{
   height: 150px;
 
   @media (min-width: $medium-width) {
